[gd_scene load_steps=9 format=3 uid="uid://4n4apw8vrdpd"]

[ext_resource type="Script" uid="uid://2rupm03k3q3u" path="res://Rooms/stupid.gd" id="1_eqjtx"]
[ext_resource type="FontFile" uid="uid://djk7fuiv1b6g5" path="res://asset/Font/justice/justice.ttf" id="2_tcyjs"]
[ext_resource type="FontFile" uid="uid://bt3d7b80qiylc" path="res://asset/Font/justice/justice3d.ttf" id="3_tc5hc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_him5y"]
bg_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o5f21"]
bg_color = Color(11.715372, 11.715372, 11.715372, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1lfst"]
bg_color = Color(11.715372, 11.715372, 11.715372, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ujrvd"]
bg_color = Color(11.715372, 11.715372, 11.715372, 0)

[sub_resource type="GDScript" id="GDScript_swtld"]

[node name="PauseMenu" type="CanvasLayer"]
visible = false
script = ExtResource("1_eqjtx")

[node name="pause_menu" type="Control" parent="."]
process_mode = 2
process_physics_priority = 8915
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="pause_menu"]
layout_mode = 0
anchor_left = 0.5
anchor_right = 0.5
offset_left = -79.0
offset_top = 21.0
offset_right = 81.0
offset_bottom = 77.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.45775273, 0.80888695, 1, 1)
theme_override_colors/font_shadow_color = Color(0.11119685, 0.11119684, 0.11119684, 1)
theme_override_fonts/font = ExtResource("2_tcyjs")
theme_override_font_sizes/font_size = 45
text = "PAUSE"

[node name="VBoxContainer" type="VBoxContainer" parent="pause_menu"]
process_mode = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = -36.0
offset_right = 69.5
offset_bottom = 84.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 1

[node name="resume_button" type="Button" parent="pause_menu/VBoxContainer"]
process_mode = 2
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.45882353, 0.80784315, 1, 1)
theme_override_colors/font_focus_color = Color(0.9607843, 0, 0.63529414, 1)
theme_override_colors/font_pressed_color = Color(0.9607843, 0, 0.63529414, 1)
theme_override_colors/font_hover_color = Color(0.9607843, 0, 0.63529414, 1)
theme_override_fonts/font = ExtResource("3_tc5hc")
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_him5y")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_o5f21")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1lfst")
theme_override_styles/hover = SubResource("StyleBoxFlat_ujrvd")
text = "Resume"
alignment = 0
script = SubResource("GDScript_swtld")

[node name="restart_button" type="Button" parent="pause_menu/VBoxContainer"]
process_mode = 2
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.45882353, 0.80784315, 1, 1)
theme_override_colors/font_focus_color = Color(0.96165866, 1.5016794e-05, 0.6366951, 1)
theme_override_colors/font_pressed_color = Color(0.9607843, 0, 0.63529414, 1)
theme_override_colors/font_hover_color = Color(0.9607843, 0, 0.63529414, 1)
theme_override_fonts/font = ExtResource("3_tc5hc")
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_him5y")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_o5f21")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1lfst")
theme_override_styles/hover = SubResource("StyleBoxFlat_ujrvd")
text = "Restart"
alignment = 0
script = SubResource("GDScript_swtld")

[node name="options_button" type="Button" parent="pause_menu/VBoxContainer"]
process_mode = 2
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.45882353, 0.80784315, 1, 1)
theme_override_colors/font_focus_color = Color(0.9607843, 0, 0.63529414, 1)
theme_override_colors/font_pressed_color = Color(0.9607843, 0, 0.63529414, 1)
theme_override_colors/font_hover_color = Color(0.9607843, 0, 0.63529414, 1)
theme_override_fonts/font = ExtResource("3_tc5hc")
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_him5y")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_o5f21")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1lfst")
theme_override_styles/hover = SubResource("StyleBoxFlat_ujrvd")
text = "Options"
alignment = 0
script = SubResource("GDScript_swtld")

[node name="exit_button" type="Button" parent="pause_menu/VBoxContainer"]
process_mode = 2
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.45882353, 0.80784315, 1, 1)
theme_override_colors/font_focus_color = Color(0.9607843, 0, 0.63529414, 1)
theme_override_colors/font_pressed_color = Color(0.9607843, 0, 0.63529414, 1)
theme_override_colors/font_hover_color = Color(0.9607843, 0, 0.63529414, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 0)
theme_override_fonts/font = ExtResource("3_tc5hc")
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_him5y")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_o5f21")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1lfst")
theme_override_styles/hover = SubResource("StyleBoxFlat_ujrvd")
text = "Exit"
alignment = 0
script = SubResource("GDScript_swtld")

[connection signal="pressed" from="pause_menu/VBoxContainer/resume_button" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="pause_menu/VBoxContainer/restart_button" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="pause_menu/VBoxContainer/options_button" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="pause_menu/VBoxContainer/exit_button" to="." method="_on_exit_button_pressed"]
